# ctf

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compile-scss.sh  flake.lock.old  flake.nix  flake.nix.old  image.nix  manage.py  pyproject.toml  requirements.txt  result  shell.nix  update.sh  uwsgi.ini
.github/workflows/: build.yml  container.yml
CTFTimeOauth/: views.py
container/: gunicorn.py
gameserver/: admin.py  apps.py  context_processors.py  forms.py  middleware.py  provider.py  signals.py  urls.py
gameserver/api/: routes.py  urls.py
gameserver/forms/: __init__.py  contest.py  organization.py  problem.py  profile.py  team.py
gameserver/migrations/: 0001_initial.py  0002_auto_20201222_2310.py  0002_auto_20201223_2059.py  0002_auto_20201231_1933.py  0002_auto_20211106_0544.py  0002_auto_20211116_0147.py  0002_auto_20211208_0457.py  0002_blogpost_summary.py  0002_problem_testers.py  0003_alter_problem_options.py  0003_alter_user_school_contact_alter_user_school_name_and_more.py  0003_auto_20201223_2137.py  0003_auto_20211106_1503.py  0004_alter_problem_options.py  0004_auto_20201225_0313.py  0004_auto_20211106_1645.py  0004_problem_challenge_spec.py  0005_alter_submission_user.py  0005_auto_20201225_0315.py  0005_editorial.py  0005_problemfile_checksum.py  0006_auto_20201227_0304.py  0006_editorial_to_writeup.py  0006_remove_submission_is_disqualified.py  0006_rename_is_private_contest_is_public_and_more.py  0007_alter_contest_options_remove_contest_teams_allowed.py  0007_auto_20201227_1651.py  0007_contest_max_team_size.py  0008_alter_organization_options_and_more.py  0008_alter_user_timezone.py  0008_auto_20201227_1731.py  0009_remove_team_organization_team_organizations.py  0009_user_full_name_user_school_contact_user_school_name.py  0010_remove_user_payment_pointer.py  0011_problem_organizations.py  0012_alter_problem_author_alter_problem_is_public_and_more.py  0012_problem_opaque_id.py  0013_alter_problem_opaque_id.py  0014_regen_opaque_id.py  0015_alter_problem_opaque_id.py  (+20 more)
gameserver/models/: __init__.py  abstract.py  cache.py  certificate.py  choices.py  comment.py  contest.py  interface.py  problem.py  profile.py  solve.py  submission.py
gameserver/templates/: 404.html  500.html  base.html  card.html  home.html  table-list.html
gameserver/templatetags/: bleach_allowlist.py  color_tags.py  common_tags.py  gravatar_tags.py  link_tags.py  markdown_tags.py  search.py  settings_tags.py
gameserver/utils/: actions.py  challenge.py
gameserver/views/: __init__.py  comment.py  contest.py  index.py  mixin.py  organization.py  problem.py  solve.py  submission.py  team.py  user.py
mCTF/: asgi.py  docker_config.py  settings.py  urls.py  wsgi.py
pCTF/: asgi.py  settings.py  urls.py  wsgi.py
providers/CTFTimeOauth/: provider.py  tests.py  urls.py  views.py
providers/kyii/: provider.py  tests.py  urls.py  views.py
public/: Makefile  gen.sh
public/scripts/: challenge.js  countdown.js  team_contest_participant_count.js  (+1 more)
src/: ctf.py
templates/: 403.html  404.html  500.html  base.html  card.html  common-header.html  dual-column.html  form-small.html  form.html  home.html  table-list.html
(+211 files in other folders)
