[tool.black]
line-length = 100
target-version = ['py310']
extend-exclude = '''
/(
  | manage.py
  | gameserver/migrations/*
  | mCTF/*
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
src_paths = ["mCTF", "gameserver"]
extend_skip_glob = ['gameserver/migrations/*.py', 'mCTF/*', 'manage.py']
py_version=310

[tool.poetry]
name = "ctf"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
#packages = [
#    { include = "mCTF" },
#    { include = "gameserver" },
#    { include = "providers" },
#]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.5.0"
beautifulsoup4 = "4.10.0"
bleach = "4.1.0"
cachetools = "5.0.0"
certifi = "2021.10.8"
cffi = "1.15.0"
charset-normalizer = "2.0.10"
cryptography = "36.0.1"
defusedxml = "0.7.1"
Django = "4.0.1"
django-admin-sortable2 = "1.0.4"
django-allauth = "0.47.0"
django-appconf = "1.0.5"
django-bootstrap5 = "21.3"
django-compressor = "3.1"
django-sass-processor = "1.1"
google-auth = "2.5.0"
idna = "3.3"
kubernetes = "21.7.0"
libsass = "0.21.0"
mistune = "2.0.2"
oauthlib = "3.1.1"
packaging = "21.3"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.21"
PyJWT = "2.3.0"
pyparsing = "3.0.7"
python-dateutil = "2.8.2"
python3-openid = "3.2.0"
PyYAML = "6.0"
rcssmin = "1.1.0"
requests = "2.27.1"
requests-oauthlib = "1.3.0"
rjsmin = "1.2.0"
rsa = "4.8"
six = "1.16.0"
soupsieve = "2.3.1"
sqlparse = "0.4.2"
urllib3 = "1.26.8"
webencodings = "0.5.1"
websocket-client = "1.2.3"

gunicorn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
