[tool.poetry]
name = "mCTF"
version = "1.0.5"
description = "A reusable CTF platform."
authors = ["Jason Cameron <ctfx@jasoncameron.dev"]
readme = "README.md"

keywords = ["ctf", "jeopardy", "ctf-platform", "django"]

classifiers = ["Topic :: Software Development"]
#packages = [
#    { include = "mCTF" },
#    { include = "gameserver" },
#    { include = "providers" },
#]

[tool.poetry.dependencies]
python = "^3.11.5"
asgiref = "^3.8.1"
bleach = "4.1.0"
certifi = "^2024.2.2"
cffi = "^1.16.0"
Django = "^5.0.3"
django-admin-sortable2 = "^2.1.10"
django-allauth = "^0.61.1"
django-bootstrap5 = "^23.4"
django-compressor = "^4.4"
django-sass-processor = "^1.4"
kubernetes = "21.7.0"
mistune = "^3.0.2"
libsass = "^0.23.0"
python-dateutil = "^2.9.0"
requests = "^2.31.0"
requests-oauthlib = "^2.0.0"
django-debug-toolbar = "^4.3.0"

gunicorn = "*"
django-ninja = "^1.1.0"
redis = "^5.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
extend-exclude = '''
/(
  | manage.py
  | gameserver/migrations/*
  | mCTF/*
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
src_paths = ["mCTF", "gameserver"]
extend_skip_glob = ['gameserver/migrations/*.py', 'mCTF/*', 'manage.py']
py_version=311